# mag-rescue

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pixi.toml  pyproject.toml
.github/workflows/: test.yaml
accessions/: README.md  kleb_short_reads_v1.summary.txt
refs/: README.md
refs/kleb_virulence/: manifest.json  metadata.tsv
refs/kleb_virulence/inputs/klebsiella__abst/: profiles.tsv
refs/kleb_virulence/inputs/klebsiella__cbst/: profiles.tsv
refs/kleb_virulence/inputs/klebsiella__smst/: profiles.tsv
refs/kleb_virulence/inputs/klebsiella__ybst/: profiles.tsv
slurm_scripts/: ariba_array.sh
src/mag_rescue/: __init__.py
src/mag_rescue/pl/: __init__.py
src/mag_rescue/pp/: __init__.py  build_ariba_ref.py  extract_accessions.py  parallel_ariba.py  run_ariba.py
src/mag_rescue/tl/: __init__.py  assess_recovery.py
tests/: test_assess_recovery.py  test_basic.py  test_build_ariba_ref.py  test_extract_accessions.py  test_parallel_ariba.py  test_run_ariba.py
