[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "mag-rescue"
version = "0.1.0"
description = "ARIBA-driven virulence/AMR profiling on Klebsiella short-read genomes"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "David Abelson", email = "dca36@cam.ac.uk" },
]
authors = [
  { name = "David Abelson" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "biopython>=1.83",
  "numpy>=1.26",
  "pandas>=2.2",
  "requests>=2.31",
  "tqdm>=4.66",
]
urls.Homepage = "https://github.com/abelsond-cam/mag-rescue"
urls.Source = "https://github.com/abelsond-cam/mag-rescue"

[tool.hatch.build.targets.wheel]
packages = ["src/mag_rescue"]

[tool.ruff]
line-length = 120
src = ["src"]
extend-include = ["*.ipynb"]

format.docstring-code-format = true

lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "I",      # isort
  "RUF100", # Report unused noqa directives
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]
lint.ignore = [
  "B008", # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # __magic__ methods are often self-explanatory, allow missing docstrings
  "D107", # Missing docstring in __init__
  "D203", # We don't want a blank line before a class docstring
  "D213", # We want docstrings to start immediately after the opening triple quote
  "D400", # first line should end with a period
  "D401", # First line should be in imperative mood
  "E501", # line too long
  "E731", # Do not assign a lambda expression
  "E741", # allow I, O, l as variable names
]
lint.per-file-ignores."*/__init__.py" = ["F401"]
lint.per-file-ignores."tests/*" = ["D"]
lint.pydocstyle.convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]

[tool.coverage.run]
source = ["mag_rescue"]
omit = ["**/test_*.py"]
